@@ -268,7 +268,7 @@ public class VaadinFrontend extends Frontend {
 	}
 
 	@Override
-	public Input<byte[]> createImage(Size size, InputComponentListener changeListener) {
+	public Input<byte[]> createImage(int size, InputComponentListener changeListener) {
 		return new VaadinImage(size, changeListener);
 	}
 
