@@ -110,7 +110,7 @@ public class SwingFrontend extends Frontend {
 	}
 
 	@Override
-	public Input<byte[]> createImage(Size size, InputComponentListener changeListener) {
+	public Input<byte[]> createImage(int size, InputComponentListener changeListener) {
 		return new SwingImage(size, changeListener);
 	}
 	
